set explicit registry for publish.

--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "crc32",
     "stream",
     "checksum"
-  ]
+  ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  }
 }
