--- a/package.json
+++ b/package.json
@@ -14,16 +14,10 @@
   "bugs": {
     "url": "https://github.com/archiverjs/node-crc32-stream/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/archiverjs/node-crc32-stream/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "main": "lib/index.js",
   "files": [
-    "lib",
-    "LICENSE-MIT"
+    "lib"
   ],
   "engines": {
     "node": ">= 0.8.0"
