--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "test": "mocha --reporter dot"
   },
   "dependencies": {
-    "readable-stream": "~2.0.0",
-    "buffer-crc32": "~0.2.1"
+    "readable-stream": "^2.0.0",
+    "buffer-crc32": "^0.2.1"
   },
   "devDependencies": {
-    "chai": "~3.4.0",
-    "mocha": "~2.3.0"
+    "chai": "^3.4.0",
+    "mocha": "^2.3.0"
   },
   "keywords": [
     "crc32-stream",
