--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "test": "mocha --reporter dot"
   },
   "dependencies": {
-    "readable-stream": "^2.0.0",
-    "buffer-crc32": "^0.2.1"
+    "crc": "^3.4.4",
+    "readable-stream": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^3.4.0",
