--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,13 @@
 environment:
   matrix:
+    - nodejs_version: '10'
     - nodejs_version: '8'
     - nodejs_version: '6'
     - nodejs_version: '4'
-    - nodejs_version: '0.12'
-    - nodejs_version: '0.10'
 install:
   - ps: Install-Product node $env:nodejs_version
   - set CI=true
-  - npm -g install npm@latest
+  - IF %nodejs_version% LSS 6 npm -g install npm@3
   - set PATH=%APPDATA%\npm;%PATH%
   - npm install
 matrix:
