--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "devDependencies": {
     "chai": "^5.1.1",
-    "mocha": "10.7.3"
+    "mocha": "10.7.3",
+    "prettier": "3.3.3"
   },
   "keywords": [
     "crc32-stream",
